# gcal_notifier

./: .gitignore  README.md  main.py  pyproject.toml
src/: main.py
